// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction page render should render the initial state of the page 1`] = `
<base-page-stub>
  <template>
    
    Transaction
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a
          role="button"
        >
          
          Sign
        
        </a>
      </li>
      <li
        class=""
      >
        <a
          role="button"
        >
          
          Recover
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-transaction-stub />
   
  <recover-transaction-stub
    style="display: none;"
  />
</base-page-stub>
`;

exports[`Transaction page render should set Recover tab 1`] = `
<base-page-stub>
  <template>
    
    Transaction
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class=""
      >
        <a
          role="button"
        >
          
          Sign
        
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          role="button"
        >
          
          Recover
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-transaction-stub
    style="display: none;"
  />
   
  <recover-transaction-stub
    style=""
  />
</base-page-stub>
`;

exports[`Transaction page render should set Sign tab 1`] = `
<base-page-stub>
  <template>
    
    Transaction
  
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a
          role="button"
        >
          
          Sign
        
        </a>
      </li>
      <li
        class=""
      >
        <a
          role="button"
        >
          
          Recover
        
        </a>
      </li>
    </ul>
  </div>
   
  <sign-transaction-stub />
   
  <recover-transaction-stub
    style="display: none;"
  />
</base-page-stub>
`;
